// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HdCheckbox Accepts <html> code as innerLabel 1`] = `
<div class="checkbox">
  <!----> <input type="checkbox" name="Test checkbox" class="checkbox__input">
  <div aria-checked="false" tabindex="0" role="checkbox" class="checkbox__inner">
    <div class="checkbox__inner__box--shadow">
      <div class="checkbox__inner__box">
        <div class="checkbox__inner__box__overlay"></div>
        <div class="checkbox__inner__box__border"></div>
        <!---->
      </div>
    </div>
    <p class="checkbox__inner__label">Hello <b>World!</b></p>
  </div>
  <!---->
</div>
`;

exports[`HdCheckbox renders component 1`] = `
<div class="checkbox">
  <!----> <input type="checkbox" name="Test checkbox" class="checkbox__input">
  <div aria-checked="false" tabindex="0" role="checkbox" class="checkbox__inner">
    <div class="checkbox__inner__box--shadow">
      <div class="checkbox__inner__box">
        <div class="checkbox__inner__box__overlay"></div>
        <div class="checkbox__inner__box__border"></div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <!---->
</div>
`;
